--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <p>I am curious about solving real-world problems with <strong>AI/ML</strong> and building dynamic <strong>web applications</strong> that make a difference.</p>
   <p>I'm proficient in <strong>Java</strong> and <strong>Python</strong>.</p>
   <p>As a <strong>leader</strong> in university 2 tech societies, I've organized 15+ events and empowered 200+ peers through workshops and mentorship.</p>
-  <p>Whether it's publishing research or designing apps, I bring energy, empathy, and execution to every project. ⚡</p>
+  <p>Whether it's publishing research or designing apps, I bring energy, empathy, and execution to every project. </p>
 </div>
 
 <p>  </p>
