--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <a href="https://github.com/Sonaliyadav17" target="_blank" class="btn">  GitHub  </a>
     <a href="https://www.linkedin.com/in/sonali-yadav17/" target="_blank" class="btn">  LinkedIn  </a>
     <a href="https://www.leetcode.com/Saebyeol_17" target="_blank" class="btn">  LeetCode  </a>
+    <a href="#" class="btn" onclick="alert('sonaliyadav0617@gmail.com')">Email</a>
   </div>
 </section>
 
