--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <img src="images/nsut.png" alt="NSUT" class="timeline-icon-img"/>
           <div class="timeline-content">
             <h3>AI/ML Intern – NSUT</h3>
-            <p>June 2025 – Present</p>
+            <p>June 2025 – August 2025</p>
             <ul>
               <li>Developed AI models for disease prediction.</li>
               <li>Collaborated with a research team on real-world datasets.</li>
@@ -214,3 +214,4 @@
   </script>
 </body>
 </html>
+
