--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p>  </p>
 <p>  </p>
   <div class="buttons">
-    <a href="SonaliYadavResume.pdf" download class="btn">Download Resume</a>
+    <a href="https://drive.google.com/file/d/1GKgXLNwWRGTSgKXUbnWia3qVG9Fmk1Yh/view" download class="btn">Download Resume</a>
   </div>
 <p></p>
   <div class="social-links">
@@ -214,4 +214,5 @@
   </script>
 </body>
 </html>
+
 
